--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,37 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doIndentOrderTest">doIndentOrderTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doIndentOrderTest">doIndentOrderTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doLoginTest">doLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doIndentWorklistViewIndentApproveFromStoreTest">doIndentWorklistViewIndentApproveFromStoreTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateIndentOrderLinkTest">doNavigateIndentOrderLinkTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doIndentWorklistViewIndentApproveToStoreTest">doIndentWorklistViewIndentApproveToStoreTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateToHISHomeTest">doNavigateToHISHomeTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doLoginTest">doLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateToSelectHospitalLocationTest">doNavigateToSelectHospitalLocationTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doNavigateIndentOrderLinkTest">doNavigateIndentOrderLinkTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doNavigateToHISHomeTest">doNavigateToHISHomeTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentWorklistPageTest" hash-for-method="doNavigateToSelectHospitalLocationTest">doNavigateToSelectHospitalLocationTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -140,7 +150,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qa.tests.IndentOrderTest</span>
+              <span class="class-name">com.qa.tests.IndentWorklistPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -148,6 +158,20 @@
                   <a name="doIndentOrderTest">
                   </a> <!-- doIndentOrderTest -->
                   <span class="method-name">doIndentOrderTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doIndentWorklistViewIndentApproveFromStoreTest">
+                  </a> <!-- doIndentWorklistViewIndentApproveFromStoreTest -->
+                  <span class="method-name">doIndentWorklistViewIndentApproveFromStoreTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doIndentWorklistViewIndentApproveToStoreTest">
+                  </a> <!-- doIndentWorklistViewIndentApproveToStoreTest -->
+                  <span class="method-name">doIndentWorklistViewIndentApproveToStoreTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -195,7 +219,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qa.tests.IndentOrderTest&quot;/&gt;
+      &lt;class name=&quot;com.qa.tests.IndentWorklistPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test1 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -235,32 +259,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'doNavigateToSelectHospitalLocationTest')
-data.setCell(0, 2, 'com.qa.tests.IndentOrderTest')
-data.setCell(0, 3, 42703);
+data.setCell(0, 1, 'doIndentWorklistViewIndentApproveFromStoreTest')
+data.setCell(0, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(0, 3, 35199);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doIndentOrderTest')
-data.setCell(1, 2, 'com.qa.tests.IndentOrderTest')
-data.setCell(1, 3, 3392);
+data.setCell(1, 1, 'doLoginTest')
+data.setCell(1, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(1, 3, 22383);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doNavigateToHISHomeTest')
-data.setCell(2, 2, 'com.qa.tests.IndentOrderTest')
-data.setCell(2, 3, 1225);
+data.setCell(2, 1, 'doIndentOrderTest')
+data.setCell(2, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(2, 3, 12539);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'doLoginTest')
-data.setCell(3, 2, 'com.qa.tests.IndentOrderTest')
-data.setCell(3, 3, 1220);
+data.setCell(3, 1, 'doIndentWorklistViewIndentApproveToStoreTest')
+data.setCell(3, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(3, 3, 3759);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'doNavigateIndentOrderLinkTest')
-data.setCell(4, 2, 'com.qa.tests.IndentOrderTest')
-data.setCell(4, 3, 871);
+data.setCell(4, 1, 'doNavigateToSelectHospitalLocationTest')
+data.setCell(4, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(4, 3, 3018);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'doNavigateToHISHomeTest')
+data.setCell(5, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(5, 3, 1336);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'doNavigateIndentOrderLinkTest')
+data.setCell(6, 2, 'com.qa.tests.IndentWorklistPageTest')
+data.setCell(6, 3, 957);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 49 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -286,34 +318,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.tests.IndentOrderTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.qa.tests.IndentWorklistPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setuptest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">doLoginTest</span>
-                <span class="method-start">4020 ms</span>
+                <span class="method-start">5327 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToSelectHospitalLocationTest</span>
-                <span class="method-start">5240 ms</span>
+                <span class="method-start">27714 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToHISHomeTest</span>
-                <span class="method-start">47946 ms</span>
+                <span class="method-start">30735 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateIndentOrderLinkTest</span>
-                <span class="method-start">49171 ms</span>
+                <span class="method-start">32073 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doIndentOrderTest</span>
-                <span class="method-start">50042 ms</span>
+                <span class="method-start">33031 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">doIndentWorklistViewIndentApproveFromStoreTest</span>
+                <span class="method-start">45574 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">doIndentWorklistViewIndentApproveToStoreTest</span>
+                <span class="method-start">80775 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">53434 ms</span>
+                <span class="method-start">84536 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
