--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.tests.PhysicalStockEntryTest</td>
+<td>com.qa.tests.IndentWorklistPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>doPhysicalStockEntryTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>doNavigateToPatientCheckInTest</td>
+<td>doNavigateIndentOrderLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -23,11 +19,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>doNavigateToHISHomeTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>doLoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>doNavigateToHISHomeTest</td>
+<td>doIndentWorklistViewIndentTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>doIndentOrderTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
