--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79cee3">  <td>21/02/08 14:22:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doLoginTest()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">doLoginTest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:56:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doIndentOrderTest()[pri:4, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doIndentOrderTest</td> 
   <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/02/08 14:23:17</td>   <td>26816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">doNavigateToHISHomeTest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:56:54</td>   <td>12768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doIndentWorklistViewIndentTest()[pri:5, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doIndentWorklistViewIndentTest</td> 
   <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/02/08 14:23:19</td>   <td>28316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToPatientCheckInTest()[pri:3, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">doNavigateToPatientCheckInTest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:54:12</td>   <td>-148834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doLoginTest()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doLoginTest</td> 
   <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/02/08 14:22:52</td>   <td>1241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">doNavigateToSelectHospitalLocationTest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:56:40</td>   <td>-1070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateIndentOrderLinkTest()[pri:3, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doNavigateIndentOrderLinkTest</td> 
   <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/02/08 14:23:21</td>   <td>30184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doPhysicalStockEntryTest()[pri:4, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">doPhysicalStockEntryTest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:56:39</td>   <td>-2244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doNavigateToHISHomeTest</td> 
   <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="ea6197">  <td>21/02/08 14:22:45</td>   <td>-5480</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">&gt;&gt;setuptest</td> 
+<tr bgcolor="79cee3">  <td>21/03/01 11:54:34</td>   <td>-126989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">doNavigateToSelectHospitalLocationTest</td> 
+  <td>main@247944893</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>21/03/01 11:54:08</td>   <td>-153211</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">&gt;&gt;setuptest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="ea6197">  <td>21/02/08 14:23:34</td>   <td>43123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@6295d394]">&lt;&lt;teardown</td> 
+<tr bgcolor="ea6197">  <td>21/03/01 11:57:56</td>   <td>74430</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@6295d394]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@247944893</td>   <td></td> </tr>
 </table>
