--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.tests.IndentOrderTest</td>
+<td>com.qa.tests.IndentWorklistPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>doNavigateIndentOrderLinkTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>doIndentWorklistViewIndentApproveFromStoreTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -28,6 +32,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>doIndentOrderTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>doIndentWorklistViewIndentApproveToStoreTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
