--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="baa398">  <td>21/02/10 16:07:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentOrderTest.doIndentOrderTest()[pri:4, instance:com.qa.tests.IndentOrderTest@475e586c]">doIndentOrderTest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:42:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doIndentOrderTest()[pri:4, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doIndentOrderTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/10 16:06:44</td>   <td>-46022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentOrderTest.doLoginTest()[pri:0, instance:com.qa.tests.IndentOrderTest@475e586c]">doLoginTest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:42:35</td>   <td>12543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doIndentWorklistViewIndentApproveFromStoreTest()[pri:5, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doIndentWorklistViewIndentApproveFromStoreTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/10 16:07:29</td>   <td>-871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentOrderTest.doNavigateIndentOrderLinkTest()[pri:3, instance:com.qa.tests.IndentOrderTest@475e586c]">doNavigateIndentOrderLinkTest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:43:10</td>   <td>47744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doIndentWorklistViewIndentApproveToStoreTest()[pri:6, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doIndentWorklistViewIndentApproveToStoreTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/10 16:07:28</td>   <td>-2096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentOrderTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.IndentOrderTest@475e586c]">doNavigateToHISHomeTest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:41:54</td>   <td>-27704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doLoginTest()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doLoginTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/10 16:06:45</td>   <td>-44802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentOrderTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.IndentOrderTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:42:21</td>   <td>-958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateIndentOrderLinkTest()[pri:3, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doNavigateIndentOrderLinkTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/02/10 16:06:40</td>   <td>-50042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.IndentOrderTest@475e586c]">&gt;&gt;setuptest</td> 
+<tr bgcolor="baa398">  <td>21/03/02 13:42:20</td>   <td>-2296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doNavigateToHISHomeTest</td> 
+  <td>main@1014166943</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/03/02 13:42:17</td>   <td>-5317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndentWorklistPageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
+  <td>main@1014166943</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>21/03/02 13:41:49</td>   <td>-33027</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">&gt;&gt;setuptest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/02/10 16:07:33</td>   <td>3392</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.IndentOrderTest@475e586c]">&lt;&lt;teardown</td> 
+<tr bgcolor="ee998b">  <td>21/03/02 13:43:14</td>   <td>51505</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.IndentWorklistPageTest@475e586c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
 </table>
